frontend/main.css
@import 'npm:materialize-css/dist/css/materialize.css';

body {
    display: flex;
    min-height: 100vh;
    flex-direction: column;
}

main {
    flex: 1 0 auto;
}

.material-icons {
    font-size: 15px;
    vertical-align: -2px;
}

.btn .material-icons {
    vertical-align: -3px;
}

.switch label:has(> #auto_logout_switch) span {
    margin-top: -2px;
    font-size: 1rem;
}

.switch label:has(> #auto_logout_switch) .lever{
    margin-left: 10px;
}

.switch label input[type=checkbox]:checked+.lever {
    background-color: #efb57c;
}

.btn, .btn-large, .switch label input[type=checkbox]:checked+.lever:after{
    background-color: #f57c00;
}

.btn:hover, .btn-large:hover {
    background-color: #ff9800;
}

.btn:active, .btn:focus, .btn-large:active, .btn-large:focus {
    background-color: #bf360c;
}

#logo-container img {
    vertical-align: middle;
    margin-top: -5px;
}

.index-main__container {
    padding-top: 10px;
}

.logout-button {
    padding: 20px 10px 0px;
    float: right;
}

.controls__hero {
    position: relative;
    bottom: 0;
    width: 100%;
    z-index: 2;
    border-top: solid 1px #212121;
    background-color: rgba(255, 255, 255, 0.9);
}

.controls__row {
    margin-bottom: 5px;
}

.controls__container {
    padding: 8px 0;
}

.login-duration {
    overflow: visible;
    float: right;
    width: 330px;
}

.login-duration__title {
    font-weight: bold;
}

.time-link {
    width: 145px;
}

.multiple-credentials-control__container {
    display: none;
    text-align: right;
}

.multiple-credentials__text {
    margin: 0;
}

.multiple-credentials-control--active {
    position: relative;
}

.multiple-credentials-control--clear {
    margin-right: 8px;
    margin-top: 8px;
}

@media screen and (max-width: 600px) {
    .login-duration {
        box-shadow: none;
        background-color: transparent;
        margin: 0;
        width: auto;
    }

    .login-duration .card-content {
        padding: 0;
    }

    .multiple-credentials-control--clear {
        position: absolute;
        top: 10px;
        left: 10px;
        margin: 0;
        color: white;
    }

    .multiple-credentials__link {
        width: 100%;
        margin-bottom: 8px;
    }

    .multiple-credentials__text {
        display: none;
    }
}

.card .card-action.card-action--permission {
    border-top: none;
    border-bottom: 1px solid #a9a9a9;
    border-bottom-color: rgba(160, 160, 160, 0.5);
}

.card .card-action.card-action--audit-log {
    padding: 5px 17px;
    border-top: none;
}

textarea.textarea--aws-profile-id.aws-profile-id {
    font-family: monospace;
    height: auto;
    margin: 10px 10px 0 -10px;
    padding: 10px;
    background-color: #f5f5f5;
}

.copy-text--button__cta {
    position: relative;
    display: block;
    padding-right: 50px;
}

.aws-profile__input {
    margin-top: 25px;
}

.card.card--aws-account {
    margin: 0.1rem 0 0.1rem 0;
}

.janus-btn--flat {
    padding-left: 8px;
    padding-right: 8px;
}

.card-action-link--tight {
    margin-right: 5px !important;
}

@media screen and (max-width: 600px) {
    .card-action-group--divider {
        margin-top: 20px;
    }

    .federation__link--cta {
        width: 75%;
    }

    .card-action-link--spaced {
        margin-right: 0;
    }

    .multi-select__label {
        margin-right: -4px;
    }
}

@media screen and (min-width: 601px) and (max-width: 750px) {
    .card-action-group--divider {
        border-left: 1px solid #a9a9a9;
    }

    .card-action-link--spaced {
        margin-right: 0;
    }

    .federation__link--cta {
        padding: 0 15px;
    }
}

@media screen and (min-width: 751px) {
    .card-action-group--divider {
        border-left: 1px solid #a9a9a9;
    }

    .card-action-link--spaced {
        margin-right: 10px;
    }

    .federation__link--cta {
        padding: 0 2rem;
    }
}

.multi-select__container {
    display: none;
    height: 36px;
    padding-top: 5px;
}

.card-action-group__row {
    margin-bottom: 0;
}

.card .card-content.card-content--aws-account-header {
    padding: 3px 17px;
}

.aws-account-body .card-action.card-action--permission {
    padding: 2px 17px 12px 17px;
}
.aws-account-body .card-content.card-content--permission-heading {
    font-weight: bold;
    padding: 12px 17px 2px 17px;
}

input[type=text].input--inline {
    width: auto;
    height: 1.4em;
    margin-bottom: 4px;
}

input[type=text].input--slim {
    height: 1.4em;
    margin-bottom: 4px;
}

.aws-account-image {
    width: 50px;
}

.card-content--aws-account-header__title {
    margin-top: 6px;
}

.card-content--aws-account-header__button--favourite {
    background-color: transparent;
    border: none;
    margin-top: 7px;
}

.card-content--aws-account-header__button--favourite:focus {
    background-color: transparent;
}

.card-content--aws-account-header__button--favourite i {
    color: white;
}

.collapsible--fixed-paragraphs .collapsible-body p {
    margin: 1rem 0;
    padding: 0 2rem;
}

.textarea--code {
    font-family: monospace;
    height: auto;
    padding: 10px;
    background-color: #f5f5f5;
}

a.copy-text--button__small {
    padding: 5px;
    font-size: 12px;
    -moz-border-radius: 3px 3px 0px 0px;
    -webkit-border-radius: 3px 3px 0px 0px;
    border-radius: 3px 3px 0px 0px;
    color: black;
    background-color: #f5f5f5;
}

.copy-text__feedback {
    position: absolute;
    top: 1px;
    right: 0;
    width: 50px;
    height: 52px;
    line-height: 52px;
    border-left: solid 1px #ffe0b2;
}

.copy-text--confirm, .copy-text--warn {
    display: none;
}

@media screen and (min-width: 600px) {
    .revoke-instructions {
        border-right: solid 1px #ccc;
    }
}

.account-summary__container {
    position: relative;
}

.account-summary__button--audit {
    position: absolute;
    top: 0;
    right: 0;
}

.account-summary__button--audit i {
    vertical-align: -4px;
}

.owners__header {
    overflow: hidden;
}

.owners__list {
    font-size: 0.9rem;
}

.owners__list--heading {
    font-weight: bold;
}

.collapsible-body--small-padding {
    padding: 10px;
}

.upcoming-support__table tbody tr:last-child {
    border-bottom: none;
}

.spooky {
    background-image: url("/images/spooky/web.png"), url("/images/spooky/bat.png");
    background-position: top left, top right;
    background-repeat: no-repeat;
}

.festive {
    background-image: url("/images/festive/snowflake.gif"), url("/images/festive/present.png");
    background-position: top left, top right;
    background-repeat: no-repeat;
}

.festive .btn, .festive .btn-large {
    background-color: #2e7d32;
}

.festive .btn:hover, .festive .btn-large:hover {
    background-color: #43a047;
}

.festive .btn:active, .festive .btn:focus, .festive .btn-large:active, .festive .btn-large:focus {
    background-color: #1b5e20;
}

